attempted missing image fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,14 @@
         <div id="wrapper">
             <div id="header">
                 <div id="title">
-                    <img src='{{ "/_includes/HPCC-Logo-All.png" | prepend: site.url }}'/>
+                    <img src='{{ "_includes/HPCC-Logo-All.png" | prepend: site.url }}'/>
                     <h1>{{ site.title }}</h1>
                 </div>
                 
 				<div id="nav">
 					<a href="{{ site.url }}">Home</a>
-					<a href="{{ site.url | append: '/about.html'}}">About</a>
-					<a href="{{ site.url | append: '/folder/content.html'}}">CONTENT!!!</a>
+					<a href="{{ site.url | append: 'about.html'}}">About</a>
+					<a href="{{ site.url | append: 'folder/content.html'}}">CONTENT!!!</a>
 				</div>
             </div>
         
