--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather"/>
         <link rel="stylesheet" href='{{ "/assets/css/main.css" | prepend: site.url }}'>
     </head>
     <body>
         <div id="wrapper">
             <div id="header">
                 <div id="title">
-                    <img src='{{ "_includes/HPCC-Logo-All.png" | prepend: site.url }}'/>
+                    <img src='{{ "/_includes/HPCC-Logo-All.png" | prepend: site.url }}'/>
                     <h1>{{ site.title }}</h1>
                 </div>
                 
