--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,7 @@ body {
 }
 
 #header {
-    background-color: #00083B;
+    background-color: #0A254E;
     color: white;
     font-size: 1.2em;
     height: 10%;
@@ -91,7 +91,7 @@ body {
 }
 
 #footer {
-    background-color: #00083B;
+    background-color: #0A254E;
     color: white;
     height: 10%;
     padding: 10px;
