--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
                 
 				<div id="nav">
 					<a href="{{ site.url }}">Home</a>
-					<a href="{{ site.url | append: 'about.html'}}">About</a>
-					<a href="{{ site.url | append: 'folder/content.html'}}">CONTENT!!!</a>
+					<a href="{{ site.url | append: 'about.md'}}">About</a>
+					<a href="{{ site.url | append: 'content.md'}}">CONTENT!!!</a>
 				</div>
             </div>
         
