change to default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,10 @@
                 </div>
             
                 <div id="content">
+                    {{ post.title }}
+                    {{ post.author }}
+                    {{ post.date }}
+                    <br>
                     {{ content }}
                 </div>
             </div>
