commit message 5: guess who's back

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,9 @@
                 </div>
             
                 <div id="content">
-                    {{ post.title }}
-                    {{ post.author }}
-                    {{ post.date }}
+                    {{ page.title }}
+                    {{ page.author }}
+                    {{ page.date }}
                     <br>
                     {{ content }}
                 </div>
